# peoples-climate-vote-analysis-2024

./: .gitignore  .pre-commit-config.yaml  README.md  git.sh  go-to-jupyter.sh  pyproject.toml  titanic.ipynb  z.md  z.py
.ipynb_checkpoints/: README-checkpoint.md  titanic-checkpoint.ipynb
cwk/: dataset.ipynb  gloom-cw1.ipynb  gloom-cw2.ipynb
cwk-01/: dataset.ipynb
cwk-01/.ipynb_checkpoints/: dataset-checkpoint.ipynb
cwk-01/Peoples_Climate_Vote_Database_2024/: .~lock.Peoples_Climate_Vote_Database_2024.xlsx#
cwk-01/Peoples_Climate_Vote_Database_2024/__MACOSX/: ._Peoples_Climate_Vote_Database_2024.xlsx
cwk/.ipynb_checkpoints/: dataset-checkpoint.ipynb  gloom-checkpoint.ipynb  gloom-cw2-checkpoint.ipynb
cwk/Peoples_Climate_Vote_Database_2024/: Peoples_Climate_Vote_Database_2024.xlsx
data/: Peoples_Climate_Vote_Database_2024.parquet
labs/: go-to-jupyter.sh  pyproject.toml  titanic.ipynb
labs/.ipynb_checkpoints/: Data Science Practical 1 sample answers-checkpoint.ipynb
labs/practical-01/: Data Science Practical 1 sample answers.ipynb  titanic.ipynb  x.py
labs/practical-01/.ipynb_checkpoints/: Data Science Practical 1 sample answers-checkpoint.ipynb
labs/practical-02/: eda_tuberculosis.ipynb  recreating_gapminder_viz.ipynb
notebooks/: PartI.ipynb  PartII.ipynb
