[project]
name = "comp5122m"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Bazigos", email = "sc222ab@leeds.ac.uk"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.9"  # Changed to match your available Python

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
    "plotly",
    "openpyxl"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "comp5122m", from = "."}]